// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 LineIndicator 正常情况 1`] = `
.c0 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background: rgba(238,238,238,1);
  z-index: 2;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  height: 2px;
  background: rgba(26,122,248,1);
  width: 100px;
  left: 0px;
}

<div
  className="c0"
/>
`;

exports[`测试 LineIndicator 默认 1`] = `
.c0 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background: rgba(238,238,238,1);
  z-index: 2;
}

.c0::before {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  height: 2px;
  background: rgba(26,122,248,1);
  width: 0px;
  left: 0px;
}

<div
  className="c0"
/>
`;
